--- a/Project/.godot/editor/project_metadata.cfg
+++ b/Project/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Program Files (x86)/Steam/steamapps/common/Godot Engine/godot.windows.opt.tools.64.exe"
+executable_path="C:/Users/icysa/Downloads/Godot_v4.2.2-stable_win64.exe/Godot_v4.2.2-stable_win64.exe"
 use_advanced_connections=false
 
 [debug_options]
@@ -25,7 +25,7 @@ Panel:scale=true
 
 create_new_node=Rect2(830, 370, 900, 700)
 search_help=Rect2(640, 360, 1280, 720)
-project_settings=Rect2(830, 370, 900, 700)
+project_settings=Rect2(852, 221, 900, 700)
 editor_settings=Rect2(830, 370, 900, 700)
 
 [script_setup]
