--- a/Project/.godot/editor/project_metadata.cfg
+++ b/Project/.godot/editor/project_metadata.cfg
@@ -27,6 +27,7 @@ create_new_node=Rect2(830, 370, 900, 700)
 search_help=Rect2(640, 360, 1280, 720)
 project_settings=Rect2(852, 221, 900, 700)
 editor_settings=Rect2(830, 370, 900, 700)
+export=Rect2(630, 170, 900, 700)
 
 [script_setup]
 
